fix some responsive issue

--- a/bahasa.html
+++ b/bahasa.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TI</title>
-  <link rel="icon" type="image/svg+xml"
-  href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22256%22 height=%22256%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2250%22 fill=%22%232da6ff%22></rect><path d=%22M60.80 22.73L60.80 22.73Q61.25 23.45 61.65 24.66Q62.06 25.88 62.06 27.32L62.06 27.32Q62.06 29.75 60.93 31.01Q59.81 32.27 57.83 32.27L57.83 32.27L45.41 32.27L45.41 77.27Q44.69 77.45 43.16 77.72Q41.63 77.99 40.01 77.99L40.01 77.99Q36.59 77.99 35.15 76.73Q33.71 75.47 33.71 72.50L33.71 72.50L33.71 32.27L18.59 32.27Q18.14 31.46 17.73 30.29Q17.33 29.12 17.33 27.68L17.33 27.68Q17.33 25.16 18.45 23.95Q19.58 22.73 21.56 22.73L21.56 22.73L60.80 22.73ZM77.27 77.99L77.27 77.99Q73.85 77.99 72.41 76.73Q70.97 75.47 70.97 72.50L70.97 72.50L70.97 22.73Q71.78 22.55 73.31 22.28Q74.84 22.01 76.37 22.01L76.37 22.01Q79.61 22.01 81.14 23.18Q82.67 24.35 82.67 27.50L82.67 27.50L82.67 77.27Q81.86 77.45 80.38 77.72Q78.89 77.99 77.27 77.99Z%22 fill=%22%23fff%22></path></svg>" />
-  <link rel="stylesheet" href="slider.css">
-  <link rel="stylesheet" href="responsif.css">
-  <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/svg+xml"
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22256%22 height=%22256%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2250%22 fill=%22%232da6ff%22></rect><path d=%22M60.80 22.73L60.80 22.73Q61.25 23.45 61.65 24.66Q62.06 25.88 62.06 27.32L62.06 27.32Q62.06 29.75 60.93 31.01Q59.81 32.27 57.83 32.27L57.83 32.27L45.41 32.27L45.41 77.27Q44.69 77.45 43.16 77.72Q41.63 77.99 40.01 77.99L40.01 77.99Q36.59 77.99 35.15 76.73Q33.71 75.47 33.71 72.50L33.71 72.50L33.71 32.27L18.59 32.27Q18.14 31.46 17.73 30.29Q17.33 29.12 17.33 27.68L17.33 27.68Q17.33 25.16 18.45 23.95Q19.58 22.73 21.56 22.73L21.56 22.73L60.80 22.73ZM77.27 77.99L77.27 77.99Q73.85 77.99 72.41 76.73Q70.97 75.47 70.97 72.50L70.97 72.50L70.97 22.73Q71.78 22.55 73.31 22.28Q74.84 22.01 76.37 22.01L76.37 22.01Q79.61 22.01 81.14 23.18Q82.67 24.35 82.67 27.50L82.67 27.50L82.67 77.27Q81.86 77.45 80.38 77.72Q78.89 77.99 77.27 77.99Z%22 fill=%22%23fff%22></path></svg>" />
+    <link rel="stylesheet" href="slider.css">
+    <link rel="stylesheet" href="responsif.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <!-- SECTION 1-->
-    <section style="background-color: #0D47A1; width: 100%; height: 610px;">
+    <section style="background-color: #0D47A1; width: 100%; min-height: 610px;">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                <h1 class="learn">Learn to Code</h1>
-                <p class="look">"Jangan meremehkan kekuatan satu baris kode. Setiap kali Anda menulis kode, Anda sedang menulis sejarah digital Anda sendiri."</p>
+                    <h1 class="learn">Learn to Code</h1>
+                    <p class="look">"Jangan meremehkan kekuatan satu baris kode. Setiap kali Anda menulis kode, Anda
+                        sedang menulis sejarah digital Anda sendiri."</p>
                 </div>
             </div>
         </div>
@@ -26,17 +29,22 @@
     <!-- SECTION 1 END-->
 
     <!-- SECTION 2 -->
-    <section style="background-color: #D9EEE1; width: 100%; height: 610px;">
+    <section style="background-color: #D9EEE1; width: 100%; min-height: 610px;">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <h1 class="french">HTML</h1><br>
-                    <p class="fries">HTML (Hypertext Markup Language) adalah bahasa markup standar yang digunakan untuk membangun dan mengatur struktur konten halaman web. HTML menggunakan elemen-elemen dan tag-tag yang ditempatkan di dalam dokumen untuk memberikan instruksi kepada browser tentang bagaimana halaman web harus ditampilkan kepada pengguna.
-                         Secara umum, HTML digunakan untuk mengatur elemen-elemen dasar dalam halaman web, seperti teks, gambar, hyperlink, tabel, formulir, dan banyak lagi. Dengan menggunakan tag-tag HTML, kita dapat menentukan bagaimana elemen-elemen ini harus ditampilkan dan berinteraksi di halaman web.</p>
-                <div class="satu">
-                    <button class="dua">Video Tutorial</button>
-                    <button class="tiga">Learn HTML</button>
-                </div>
+                    <p class="fries">HTML (Hypertext Markup Language) adalah bahasa markup standar yang digunakan untuk
+                        membangun dan mengatur struktur konten halaman web. HTML menggunakan elemen-elemen dan tag-tag
+                        yang ditempatkan di dalam dokumen untuk memberikan instruksi kepada browser tentang bagaimana
+                        halaman web harus ditampilkan kepada pengguna.
+                        Secara umum, HTML digunakan untuk mengatur elemen-elemen dasar dalam halaman web, seperti teks,
+                        gambar, hyperlink, tabel, formulir, dan banyak lagi. Dengan menggunakan tag-tag HTML, kita dapat
+                        menentukan bagaimana elemen-elemen ini harus ditampilkan dan berinteraksi di halaman web.</p>
+                    <div class="satu">
+                        <button class="dua">Video Tutorial</button>
+                        <button class="tiga">Learn HTML</button>
+                    </div>
                 </div>
                 <div class="col-md-6">
                     <img src="assets/img/div.w3-hide-small.svg" class="prancis">
@@ -47,17 +55,25 @@
     <!-- SECTION 2 END-->
 
     <!-- SECTION 3 -->
-    <section style="background-color: #FFF4A3; width: 100%; height: 610px;">
+    <section style="background-color: #FFF4A3; width: 100%; min-height: 610px;">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <h1 class="french">CSS</h1><br>
-                    <p class="fries" style="font-size: 17px !important;">CSS (Cascading Style Sheets) adalah bahasa yang digunakan untuk mengontrol tampilan dan gaya visual dari elemen-elemen dalam halaman web. Dengan menggunakan CSS, kita dapat mengubah warna, tata letak, font, ukuran, dan berbagai properti lainnya dari elemen-elemen HTML pada halaman web.
-                        CSS bekerja dengan memisahkan tata letak dan gaya visual dari struktur konten HTML. Ini berarti kita dapat membuat satu file CSS terpisah yang berisi aturan-aturan gaya, dan kemudian menghubungkannya ke halaman web HTML menggunakan tag <link>. Dengan cara ini, kita dapat menerapkan aturan gaya yang sama ke banyak halaman web, sehingga memudahkan dalam memelihara dan mengubah tampilan keseluruhan situs web.</p>
-                <div class="satu">
-                    <button class="dua">Video Tutorial</button>
-                    <button class="tiga">Learn CSS</button>
-                </div>
+                    <p class="fries" >CSS (Cascading Style Sheets) adalah bahasa yang
+                        digunakan untuk mengontrol tampilan dan gaya visual dari elemen-elemen dalam halaman web. Dengan
+                        menggunakan CSS, kita dapat mengubah warna, tata letak, font, ukuran, dan berbagai properti
+                        lainnya dari elemen-elemen HTML pada halaman web.
+                        CSS bekerja dengan memisahkan tata letak dan gaya visual dari struktur konten HTML. Ini berarti
+                        kita dapat membuat satu file CSS terpisah yang berisi aturan-aturan gaya, dan kemudian
+                        menghubungkannya ke halaman web HTML menggunakan tag
+                        <link>. Dengan cara ini, kita dapat menerapkan aturan gaya yang sama ke banyak halaman web,
+                        sehingga memudahkan dalam memelihara dan mengubah tampilan keseluruhan situs web.
+                    </p>
+                    <div class="satu">
+                        <button class="dua">Video Tutorial</button>
+                        <button class="tiga">Learn CSS</button>
+                    </div>
                 </div>
                 <div class="col-md-6">
                     <img src="assets/img/div.w3-hide-small (1).svg" class="prancis">
@@ -68,17 +84,23 @@
     <!-- SECTION 3 END -->
 
     <!-- SECTION 4 -->
-    <section style="background-color: #B5DAFF; width: 100%; height: 610px;">
+    <section style="background-color: #B5DAFF; width: 100%; min-height: 610px;">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <h1 class="french">JavaScript</h1><br>
-                    <p class="fries">JavaScript adalah bahasa pemrograman tingkat tinggi yang digunakan untuk mengembangkan aplikasi web interaktif. Dibandingkan dengan HTML dan CSS yang fokus pada struktur dan tampilan, JavaScript memungkinkan kita untuk memberikan interaktivitas, logika, dan pengolahan data yang dinamis pada halaman web.
-                        JavaScript dapat dieksekusi oleh browser web, yang memungkinkan kita untuk mengontrol dan memanipulasi elemen-elemen HTML, merespons tindakan pengguna, melakukan validasi formulir, mengubah gaya dan konten halaman secara dinamis, mengelola animasi, berkomunikasi dengan server, dan banyak lagi.</p>
-                <div class="satu">
-                    <button class="dua">Video Tutorial</button>
-                    <button class="tiga">Learn JS</button>
-                </div>
+                    <p class="fries">JavaScript adalah bahasa pemrograman tingkat tinggi yang digunakan untuk
+                        mengembangkan aplikasi web interaktif. Dibandingkan dengan HTML dan CSS yang fokus pada struktur
+                        dan tampilan, JavaScript memungkinkan kita untuk memberikan interaktivitas, logika, dan
+                        pengolahan data yang dinamis pada halaman web.
+                        JavaScript dapat dieksekusi oleh browser web, yang memungkinkan kita untuk mengontrol dan
+                        memanipulasi elemen-elemen HTML, merespons tindakan pengguna, melakukan validasi formulir,
+                        mengubah gaya dan konten halaman secara dinamis, mengelola animasi, berkomunikasi dengan server,
+                        dan banyak lagi.</p>
+                    <div class="satu">
+                        <button class="dua">Video Tutorial</button>
+                        <button class="tiga">Learn JS</button>
+                    </div>
                 </div>
                 <div class="col-md-6">
                     <img src="assets/img/div.w3-hide-small (2).svg" class="prancis">
@@ -89,16 +111,20 @@
     <!-- SECTION 4 END -->
 
     <!-- SECTION 5 -->
-    <section style="background-color: #E5C6D6; width: 100%; height: 610px;">
+    <section style="background-color: #E5C6D6; width: 100%; min-height: 610px;">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <h1 class="french">Python</h1><br>
-                    <p class="fries" style="font-size: 30px !important;">Python adalah bahasa pemrograman tingkat tinggi yang didesain dengan fokus pada kejelasan sintaks dan kemudahan pemahaman. Diciptakan oleh Guido van Rossum pada tahun 1991, Python memiliki filosofi yang menekankan pada kelegaan kode dan membaca seperti pseudocode, sehingga membuatnya menjadi bahasa yang mudah dipelajari dan digunakan oleh pemula sekalipun.</p>
-                <div class="satu">
-                    <button class="dua">Video Tutorial</button>
-                    <button class="tiga">Learn Python</button>
-                </div>
+                    <p class="fries" >Python adalah bahasa pemrograman tingkat tinggi
+                        yang didesain dengan fokus pada kejelasan sintaks dan kemudahan pemahaman. Diciptakan oleh Guido
+                        van Rossum pada tahun 1991, Python memiliki filosofi yang menekankan pada kelegaan kode dan
+                        membaca seperti pseudocode, sehingga membuatnya menjadi bahasa yang mudah dipelajari dan
+                        digunakan oleh pemula sekalipun.</p>
+                    <div class="satu">
+                        <button class="dua">Video Tutorial</button>
+                        <button class="tiga">Learn Python</button>
+                    </div>
                 </div>
                 <div class="col-md-6">
                     <img src="assets/img/div.w3-hide-small (3).svg" class="prancis">
@@ -109,17 +135,21 @@
     <!-- SECTION 5 END -->
 
     <!-- SECTION 6 -->
-    <section style="background-color: #96d4d4; width: 100%; height: 610px;">
+    <section style="background-color: #96d4d4; width: 100%; min-height: 610px;">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <h1 class="french">PHP</h1><br>
-                    <p class="fries" style="font-size: 30px !important;">PHP (Hypertext Preprocessor) adalah bahasa pemrograman skrip yang dirancang khusus untuk pengembangan aplikasi web. PHP biasanya dijalankan di sisi server, yang berarti kode PHP dieksekusi di server web sebelum hasilnya dikirim ke browser pengguna.
-                        PHP memiliki sintaks yang mirip dengan C dan dilengkapi dengan berbagai fitur yang memungkinkan pengembangan web yang dinamis dan interaktif.</p>
-                <div class="satu">
-                    <button class="dua">Video Tutorial</button>
-                    <button class="tiga">Learn PHP</button>
-                </div>
+                    <p class="fries" >PHP (Hypertext Preprocessor) adalah bahasa
+                        pemrograman skrip yang dirancang khusus untuk pengembangan aplikasi web. PHP biasanya dijalankan
+                        di sisi server, yang berarti kode PHP dieksekusi di server web sebelum hasilnya dikirim ke
+                        browser pengguna.
+                        PHP memiliki sintaks yang mirip dengan C dan dilengkapi dengan berbagai fitur yang memungkinkan
+                        pengembangan web yang dinamis dan interaktif.</p>
+                    <div class="satu">
+                        <button class="dua">Video Tutorial</button>
+                        <button class="tiga">Learn PHP</button>
+                    </div>
                 </div>
                 <div class="col-md-6">
                     <img src="assets/img/div.w3-hide-small (4).svg" class="prancis">
@@ -131,4 +161,5 @@
 
 
 </body>
+
 </html>
