--- a/index.html
+++ b/index.html
@@ -419,6 +419,7 @@
         <div class="row">
           <h2 style="color: #000000; padding: 10px;">Bahasa Pemrograman yang dipelajari</h2>
         </div>
+        <a href="bahasa.html">
         <div class="blobs-container">
           <!-- blob -->
           <div class="blob">
@@ -519,6 +520,7 @@
             </div>
           </div>
         </div>
+        </a>
       </div>
     </section>
     <svg width="100%" height="100%" id="svg" viewBox="0 0 1440 390" xmlns="http://www.w3.org/2000/svg"
