--- a/profil.html
+++ b/profil.html
@@ -225,7 +225,7 @@
               keislaman pada tahun 2030</q>
           </div>
           <div class="col-md-6"
-            style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 30px;">
+            style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 30px 45px;">
             <ol class="desc">
               <li>Menyelenggarakan pendidikan dan pengajaran bidang komputasi cerdas</li>
               <li>Menyelenggarakan penelitian dan pengabdian masyarakat bidang komputasi.</li>
@@ -261,7 +261,7 @@
         </div>
         <div class="row">
           <div class="col-md-12"
-            style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 30px">
+            style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 30px;text-align:center">
             <p>Akreditasi Program Studi Teknik Informatika adalah B sesuai dengan no SK Ban PT
               2429/SK/BAN-PT/Akred/S/IX/2018</p>
             <p> dokumen SK dan Sertifikat Akreditasi (Berlaku untuk tahun lululsan 2012 ke atas)</p>
