tulisan modal sudah, tinggal bentuk card nya aja

--- a/forkafest.html
+++ b/forkafest.html
@@ -216,77 +216,138 @@
         </div>
         <div class="row">
           <div class="col-md-4" style="padding: 30px;">
-            <!-- card -->
+            <!-- card 1 -->
             <div class="card sutter1">
               <div class="merah">
               </div>
-              <button class="allin" id="open">PUBG MOBILE</button>
+              <button class="allin" id="open1">PUBG MOBILE</button>
 
             </div>
-            <!-- end -->
+            <!-- 1 end -->
           </div>
           <div class="col-md-4" style="padding: 30px;">
-            <!-- card -->
+            <!-- card 2 -->
             <div class="card sutter2">
               <div class="ijo">
               </div>
-              <p><a href="#" style="text-decoration: none;">MOBILE LEGEND</a></p>
+              <button class="allin" id="open2" style="background-color: #2bff2b !important;">MOBILE LEGEND</button>
             </div>
-            <!-- end -->
+            <!-- 2 end -->
           </div>
           <div class="col-md-4" style="padding: 30px;">
-            <!-- card -->
+            <!-- card 3 -->
             <div class="card sutter3">
               <div class="ungu">
               </div>
-              <p><a href="#" style="text-decoration: none;">DESAIN UI/UX</a></p>
+              <button class="allin" id="open3" style="background-color: #9318d1 !important;">DESAIN UI/UX</button>
             </div>
-            <!-- end -->
+            <!-- 3 end -->
           </div>
         </div>
         <div class="row">
           <div class="col-md-4" style="padding: 30px;">
-            <!-- card -->
-            <div class="card sutter4">
+            <!-- card 4 -->
+            <div class="card sutter2">
               <div class="ijo">
               </div>
-              <p><a href="#" style="text-decoration: none;">CYBER SECURITY</a></p>
+              <button class="allin" id="open4" style="background-color: #2bff2b !important;">CYBER SECURITY</button>
             </div>
-            <!-- end -->
+            <!-- 4 end -->
           </div>
           <div class="col-md-4" style="padding: 30px;">
-            <!-- card -->
-            <div class="card sutter5">
+            <!-- card 5 -->
+            <div class="card sutter3">
               <div class="ungu">
               </div>
-              <p><a href="#" style="text-decoration: none;">WEB DEVELOPMENT</a></p>
+             <button class="allin" id="open5" style="background-color: #9318d1 !important;">WEB DEVELOPMENT</button>
             </div>
-            <!-- end -->
+            <!-- 5 end -->
           </div>
           <div class="col-md-4" style="padding: 30px;">
-            <!-- card -->
-            <div class="card sutter6">
+            <!-- card 6 -->
+            <div class="card sutter1">
               <div class="merah">
               </div>
-              <p><a href="#" style="text-decoration: none;">COMPUTER NETWORK</a></p>
+              <button class="allin" id="open6" style="font-size: 13px !important;">COMPUTER NETWORK</button>
             </div>
-            <!-- end -->
+            <!-- 6 end -->
           </div>
         </div>
       </div>
     </section>
     <!-- SECTION 3 END -->
     <section>
-      <!-- modal 1 -->
-      <div class="modal-container" id="modal_container">
+      <!-- MODAL 1 -->
+      <div class="modal-container" id="modal_container1">
         <div class="modal">
           <h1>PUBG MOBILE</h1>
-          <p>HUMANIKA Unmuh Jember PROUDLY PRESENT FORKAFEST 3.0 PUBG MOBILE. Hai Gamers, Yuk ikut lomba PUBG Mobile
-            dalam
-            mengembangkan bakat dan minat para pemain PUBG. Tema : "The Dreams of Teamwork</p>
-          <button class="iyadong" id="close">Close</button>
+          <p>HUMANIKA Unmuh Jember PROUDLY PRESENT FORKAFEST 3.0 PUBG MOBILE. Hai Gamers, Yuk ikut lomba PUBG Mobile 
+            dalam mengembangkan bakat dan minat para pemain PUBG. Tema : "The Dreams of Teamwork"</p>
+          <button class="iyadong" id="close1">Close</button>
         </div>
       </div>
+      <!-- MODAL 1 END-->
+
+      <!-- MODAL 2 -->
+      <div class="modal-container" id="modal_container2">
+        <div class="modal">
+          <h1>MOBILE LEGEND</h1>
+          <p>HUMANIKA Unmuh Jember PROUDLY PRESENT FORKAFEST 3.0 PUBG MOBILE. Hai Gamers, Yuk ikut lomba Mobile
+            Legend dalam mengembangkan bakat dan minat para pemain ML. Tema : "Moment of Win"</p>
+          <button class="iyadong" id="close2" style="background-color: #2bff2b;">Close</button>
+        </div>
+      </div>
+      <!-- MODAL 2 END-->
+
+      <!-- MODAL 3 -->
+      <div class="modal-container" id="modal_container3">
+        <div class="modal">
+          <h1>DESAIN UI/UX</h1>
+          <p>HUMANIKA Unmuh Jember PROUDLY PRESENT FORKAFEST 3.0 DESAIN UI/UX. Hai Designers, Yuk ikut lomba Desain UI/UX
+            dalam mengapresiasi karya pelajar dan mahasiswa untuk mewujudkan mimpi.
+            Tema : "Meningkatkan kreativitas generasi muda dengan teknologi digital dalam menghadapi era society 5.0"</p>
+          <button class="iyadong" id="close3" style="background-color: #9318d1;">Close</button>
+        </div>
+      </div>
+      <!-- MODAL 3 END-->
+
+      <!-- MODAL 4 -->
+      <div class="modal-container" id="modal_container4">
+        <div class="modal">
+          <h1>CYBER SECURITY</h1>
+          <p>HUMANIKA Unmuh Jember PROUDLY PRESENT FORKAFEST 3.0 CYBER SECURITY. Hello guys, Yuk ikut lomba CRYPTOGRAPHIC
+            sebagai ajang untuk meningkatkan pengalaman di bidang KEAMANAN INFORMASI.
+            Tema : "Bersatu Membangun Peradaban Digital Yang Cerdas, Beradab, dan Berbudaya"
+          </p>
+          <button class="iyadong" id="close4"  style="background-color: #2bff2b;">Close</button>
+        </div>
+      </div>
+      <!-- MODAL 4 END-->
+
+      <!-- MODAL 5 -->
+      <div class="modal-container" id="modal_container5">
+        <div class="modal">
+          <h1>WEB DEVELOPMENT</h1>
+          <p>HUMANIKA Unmuh Jember PROUDLY PRESENT FORKAFEST 3.0 WEB DEVELOPMENT. Hello guys, Yuk ikut lomba Web Development
+            sebagai ajang untuk meningkatkan pengalaman di bidang Website Development.
+            Tema : "To Get Better in Developing"
+          </p>
+          <button class="iyadong" id="close5" style="background-color: #9318d1;">Close</button>
+        </div>
+      </div>
+      <!-- MODAL 5 END-->
+
+      <!-- MODAL 6 -->
+      <div class="modal-container" id="modal_container6">
+        <div class="modal">
+          <h1>COMPUTER NETWORK</h1>
+          <p>HUMANIKA Unmuh Jember PROUDLY PRESENT FORKAFEST 3.0 COMPUTER NETWORK. Whats up guys, Yuk ikut lomba Computer Network
+            sebagai ajang untuk meningkatkan pengalaman di bidang Networking.
+            Tema : "Explore the World With Internet"</p>
+          <button class="iyadong" id="close6">Close</button>
+        </div>
+      </div>
+      <!-- MODAL 6 END-->
     </section>
 
     <svg width="100%" height="100%" id="svg" viewBox="0 0 1440 390" xmlns="http://www.w3.org/2000/svg"
