--- a/index.html
+++ b/index.html
@@ -547,40 +547,40 @@
         </div>
         <div class="row-c">
           <div id="gallery">
-            <div><img src="https://picsum.photos/600/600/?image=512" /><a href="#lightbox-1">512</a></div>
-            <div><img src="https://picsum.photos/600/600/?image=513" /><a href="#lightbox-2">513</a></div>
-            <div><img src="https://picsum.photos/600/600/?image=514" /><a href="#lightbox-3">514</a></div>
-            <div><img src="https://picsum.photos/600/600/?image=515" /><a href="#lightbox-4">515</a></div>
-            <div><img src="https://picsum.photos/600/600/?image=516" /><a href="#lightbox-5">516</a></div>
-            <div><img src="https://picsum.photos/600/600/?image=517" /><a href="#lightbox-6">517</a></div>
+            <div><img src="assets/img/gallery/4.JPG" /><a href="#lightbox-1">512</a></div>
+            <div><img src="assets/img/gallery/4.JPG" /><a href="#lightbox-2">513</a></div>
+            <div><img src="assets/img/gallery/4.JPG" /><a href="#lightbox-3">514</a></div>
+            <div><img src="assets/img/gallery/4.JPG" /><a href="#lightbox-4">515</a></div>
+            <div><img src="assets/img/gallery/4.JPG" /><a href="#lightbox-5">516</a></div>
+            <div><img src="assets/img/gallery/4.JPG" /><a href="#lightbox-6">517</a></div>
           </div>
           <div class="lightbox" id="lightbox-1">
-            <div class="content"><img src="https://picsum.photos/1920/1080/?image=512" />
+            <div class="content"><img src="assets/img/gallery/4.JPG" />
               <div class="title">No. <b>512</b> from Picsum</div><a class="close" href="#gallery"></a>
             </div>
           </div>
           <div class="lightbox" id="lightbox-2">
-            <div class="content"><img src="https://picsum.photos/1920/1080/?image=513" />
+            <div class="content"><img src="assets/img/gallery/4.JPG" />
               <div class="title">No. <b>513</b> from Picsum</div><a class="close" href="#gallery"></a>
             </div>
           </div>
           <div class="lightbox" id="lightbox-3">
-            <div class="content"><img src="https://picsum.photos/1920/1080/?image=514" />
+            <div class="content"><img src="assets/img/gallery/4.JPG" />
               <div class="title">No. <b>514</b> from Picsum</div><a class="close" href="#gallery"></a>
             </div>
           </div>
           <div class="lightbox" id="lightbox-4">
-            <div class="content"><img src="https://picsum.photos/1920/1080/?image=515" />
+            <div class="content"><img src="assets/img/gallery/4.JPG" />
               <div class="title">No. <b>515</b> from Picsum</div><a class="close" href="#gallery"></a>
             </div>
           </div>
           <div class="lightbox" id="lightbox-5">
-            <div class="content"><img src="https://picsum.photos/1920/1080/?image=516" />
+            <div class="content"><img src="assets/img/gallery/4.JPG" />
               <div class="title">No. <b>516</b> from Picsum</div><a class="close" href="#gallery"></a>
             </div>
           </div>
           <div class="lightbox" id="lightbox-6">
-            <div class="content"><img src="https://picsum.photos/1920/1080/?image=517" />
+            <div class="content"><img src="assets/img/gallery/4.JPG" />
               <div class="title">No. <b>517</b> from Picsum</div><a class="close" href="#gallery"></a>
             </div>
           </div>
