--- a/prestasi.html
+++ b/prestasi.html
@@ -48,7 +48,7 @@
       <a href="#">Your Logo</a>
     </div>
     <ul class="nav-links">
-      <li><a href="/">Beranda</a></li>
+      <li><a href="index.html">Beranda</a></li>
       <li><a href="profil.html">Tentang kami</a></li>
       <li><a href="prestasi.html">Prestasi</a></li>
       <li><a href="forkafest.html">Forkafest</a></li>
