--- a/forkafest.html
+++ b/forkafest.html
@@ -121,7 +121,7 @@
           <h2 class="brothree" style="color: #FFB703;; padding: 10px; font-size: 54px;">Forkafest 2023</h2>
         </div>
         <div class="brofour" class="col-md-12" style="font-size: 24px;">
-          <p style="font-family: 'Mukta', sans-serif; color: #f8f8f8;">ForkaFest (Informatika Festival) adalah sebuah festival yang
+          <p style="font-family: 'Mukta', sans-serif !important; color: #f8f8f8;">ForkaFest (Informatika Festival) adalah sebuah festival yang
             berkaitan dengan bidang informatika. Festival ini dirancang untuk menyatukan para profesional, penggiat, dan
             pecinta informatika untuk merayakan dan mengapresiasi perkembangan terbaru dalam dunia teknologi dan
             komputasi. </p>
@@ -383,6 +383,68 @@
         class="transition-all duration-300 ease-in-out delay-150 path-2" transform="rotate(-180 720 200)"></path>
     </svg>
   </main>
+   <!-- foter -->
+  <footer style="background-color: #0d47a1; margin-top: -5px; padding: 20px; color: #f8f8f8;">
+    <div class="container-fluid">
+      <div class="row" style="display: flex; justify-content: space-between; align-items: end; flex-direction: row;">
+        <div class="col-md-4">
+          <h3>Sekretariat HMD TE</h3>
+          <style>
+            .icon {
+              display: flex;
+              align-items: center;
+            }
+
+            .icon i {
+              margin-right: 15px;
+            }
+
+            .alamat i {
+              margin-right: 20px;
+            }
+
+            .sosmed {
+              margin: 20px 0;
+            }
+
+            .sosmed a {
+
+              color: #f8f8f8;
+              border-radius: 50%;
+              background-color: #033E50;
+              padding: 10px 13px 10px 13px;
+            }
+          </style>
+          <div class="alamat icon">
+            <i class="fas fa-map-marker-alt"></i>
+            <p>Jl. Raya Bandung Sumedang KM. 21 Jatinangor</p>
+          </div>
+          <!-- email -->
+          <div class="email icon">
+            <i class="fas fa-envelope"></i>
+            <p>ini.email@gmail.com</p>
+          </div>
+          <!-- telp -->
+          <div class="telp icon">
+            <i class="fas fa-phone-alt"></i>
+            <p>08123456789</p>
+          </div>
+          <!-- sosmed -->
+          <div class="sosmed">
+            <a href="https://www.instagram.com/hmdteunpad/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/hmdteunpad/" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com/hmdteunpad" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.youtube.com/channel/UC9Z3Z4ZvX2nX2Z8QZ3Z4ZvX2nX2Z8Q" target="_blank"><i
+                class="fab fa-youtube"></i></a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <!-- copyright -->
+          <p style="text-align: end;">&copy creator 2023</p>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="script.js"></script>
   <script type="text/javascript" src="model.js"></script>
 </body>
