--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
     <div class="container-fluid">
       <div class="row" style="display: flex; justify-content: space-between; align-items: end; flex-direction: row;">
         <div class="col-md-4">
-          <h3>Sekertaiat HMD TE</h3>
+          <h3>Sekretariat HMD TE</h3>
           <style>
             .icon {
               display: flex;
